# aoc2021

data/: day04.txt  day05.txt  day08.txt  day12_example2.txt  day13.txt  day16.txt  day20.txt  day22.txt  day23.txt  day23_example2_states.txt  day23_part2.txt  day25.txt
rust/: Cargo.toml
rust/src/: data.rs  lib.rs  main.rs
zig/: build.zig
zig/src/: main.zig
