[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Forrest Smith <forrestthewoods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fts_vecmath = { path = "../../fts_gamemath/fts_vecmath" }
itertools = "0.9.0"
lazy_static = "1.4.0"
priority-queue = "1.2.1"
regex = "1.4.2"
petgraph = "0.5.1"
structopt = "0.3.21"
